# curator

./: .env.example  .gitignore  AGENTS.md  DATABASE.md  GOOGLE_OAUTH_SETUP.md  README.md  alembic.ini  app.py  app.vue  artmoments.mcp.txt  curator.graphql  curator.session.sql  docker-compose.yml  init.sql  model.py  nuxt.config.ts  package-lock.json  package.json  readme.md  requirements.txt  resolvers.py  tsconfig.json
curator/: ARCHITECTURE.md  CURATOR_AST.md  Cargo.toml  Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json  prisma.config.ts  run_test.ts  tsconfig.json
curator-bevy-plugin/: Cargo.toml  README.md
curator-bevy-plugin/src/: ast.rs  lib.rs  memory.rs  processor.rs  sqlite_store.rs
curator-bevy-plugin/tests/: test_pattern_sequential.rs
curator/data/: coffee_test.db  default.db  err_weather.db  rss_weather.db  test_adk.db  test_agent_run.db  test_dist.db  test_pipeline.db  test_run.db  test_shacl_db.db
curator/prisma/: schema.prisma
curator/scripts/: adk_examples.ts  insert_human.ts  rss_weather_agent.coffee  rss_weather_agent.ts  run_agent_example.coffee  run_agent_example.ts  seed_semantic.ts  seed_test_db.ts  test-poem.ps1  test_adk_autonomous_scraper.ts  test_adk_pipeline.ts  test_adk_processor.ts  test_adk_session.ts  test_adk_tool.ts  test_agent_poker.ts  test_api.ts  test_api2.ts  test_empty.ts  test_event_poker.ts  test_exclude_from_history.ts  test_graph.ts  test_human.ts  test_include_contents.ts  test_interpolation.ts  test_local_gemma.ts  test_pattern_coordinator.ts  test_pattern_events.ts  test_pattern_hierarchical.ts  test_pattern_human.ts  test_pattern_interrupt.ts  test_pattern_mcp.ts  test_pattern_parallel.ts  (+9 more)
(+429 files in other folders)
